--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,5 @@ org.gradle.jvmargs=-Xmx8G
 	archives_base_name = enderism
 
 # Dependencies
-	fabric_version=0.58.4+1.19.1
+	fabric_version = 0.58.4+1.19.1
+	fasm_version = v2.3
