--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -26,6 +27,12 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	// Fabric ASM. Used for making the Elytra Enchantment Target work, because Mojank. Thanks to QupletsQu-Enchantments (https://github.com/Quplet/Qu-Enchantments)
+	// because they used this mod and i used their code to help me figure out how to add a Jar-in-a-Jar dependency and get this api working. :)
+	modImplementation "com.github.Chocohead:Fabric-ASM:${project.fasm_version}"
+	include "com.github.Chocohead:Fabric-ASM:${project.fasm_version}"
+
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
@@ -50,7 +57,7 @@ java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
 	// If you remove this line, sources will not be generated.
-	withSourcesJar()
+	withSourcesJar() // no, ok maybe just maybe
 }
 
 jar {
@@ -58,6 +65,7 @@ jar {
 		rename { "${it}_${project.archivesBaseName}"}
 	}
 }
+
 
 // configure the maven publication
 publishing {
