--- a/gradle.properties
+++ b/gradle.properties
@@ -8,10 +8,11 @@ org.gradle.jvmargs=-Xmx8G
 	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 0.5.0b
+	mod_version = 1.0.0
 	maven_group = net.diamonddev
 	archives_base_name = enderism
 
 # Dependencies
 	fabric_version = 0.58.4+1.19.1
 	fasm_version = v2.3
+	reflections = 0.10.2
