--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,15 @@ repositories {
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
 	maven { url 'https://jitpack.io' }
+
+	maven {
+		name = 'Ladysnake Mods'
+		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+		content {
+			includeGroup 'io.github.ladysnake'
+			includeGroupByRegex 'io\\.github\\.onyxstudios.*'
+		}
+	}
 }
 
 dependencies {
@@ -33,6 +42,13 @@ dependencies {
 	modImplementation "com.github.Chocohead:Fabric-ASM:${project.fasm_version}"
 	include "com.github.Chocohead:Fabric-ASM:${project.fasm_version}"
 
+	// libgenetics
+	modImplementation "com.github.diamonddevv:libgenetics:${project.lg_ver}"
+	include "com.github.diamonddevv:libgenetics:${project.lg_ver}"
+
+	// satin
+	modImplementation "io.github.ladysnake:satin:${satin_version}"
+	include "io.github.ladysnake:satin:${satin_version}"
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
