--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ org.gradle.jvmargs=-Xmx8G
 # Dependencies
 	fabric_version=0.60.0+1.19.2
 	fasm_version = v2.3
+	lg_ver = e123b6f
+	satin_version = 1.9.0
