--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,11 @@
 plugins {
-	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
+	alias libs.plugins.quilt.loom
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
 
-archivesBaseName = project.archives_base_name
-version = project.mod_version
+base.archivesName = project.archives_base_name
+version = "$project.version+${libs.versions.minecraft.get()}"
 group = project.maven_group
 
 repositories {
@@ -34,19 +32,20 @@ loom {
 
 dependencies {
 	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft libs.minecraft
+	mappings variantOf(libs.quilt.mappings) { classifier 'intermediary-v2' }
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation libs.quilt.loader // my favourite part was when he said its quiltin time and then quilted all over the place
+
+	// QFAPI
+	modImplementation libs.quilted.fabric.api
 
 	// Fabric ASM. Used for making the Elytra Enchantment Target work, because Mojank. Thanks to Quplets Qu-Enchantments (https://github.com/Quplet/Qu-Enchantments)
 	// because they used this mod and i used their code to help me figure out how to add a Jar-in-a-Jar dependency and get this api working. :)
-	include modImplementation("com.github.Chocohead:Fabric-ASM:${project.fasm_version}")
+	include modImplementation("com.github.Chocohead:Fabric-ASM:${project.fabricasm}")
 
 	// libGenetics
-	include modImplementation ("com.github.diamonddevv:libgenetics:${project.libgenetics_version}");
+	include modImplementation ("com.github.diamonddevv:libgenetics:${project.libgenetics}");
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
@@ -57,17 +56,21 @@ dependencies {
 processResources {
 	inputs.property "version", project.version
 
-	filesMatching("fabric.mod.json") {
+	filesMatching("quilt.mod.json") {
 		expand "version": project.version
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = 'UTF-8'
 	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
 	it.options.release = 17
 }
 
 java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
+
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
 	// If you remove this line, sources will not be generated.
