--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,5 @@ org.gradle.jvmargs=-Xmx8G
 
 # Dependencies
 	fabricasm = v2.3
-	libgenetics = cff95c1
+	libgenetics = 9557804
+	simple_trims_version = 0.2.0
