--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx8G
 
 
 # Mod Properties
-	version = 3.0.0
+	version = 3.0.0-beta.1
 	maven_group = io.github.diamonddevv
 	archives_base_name = enderism
 
@@ -15,3 +15,4 @@ org.gradle.jvmargs=-Xmx8G
 	fabricasm = v2.3
 	libgenetics = 9557804
 	simple_trims_version = 0.2.0
+	mixin_extras_version = 0.2.0-beta.9
