--- a/src/main/resources/data/enderism/loot_tables/modifier/minecraft/chests/end_city_treasure.json
+++ b/src/main/resources/data/enderism/loot_tables/modifier/minecraft/chests/end_city_treasure.json
@@ -21,6 +21,17 @@
         },
         {
           "type": "minecraft:item",
+          "functions": [
+            {
+              "function": "minecraft:set_count",
+              "add": false,
+              "count": {
+                "type": "minecraft:uniform",
+                "max": 1.0,
+                "min": 1.0
+              }
+            }
+          ],
           "name": "enderism:pirpell_plated_tool_upgrade_smithing_template",
           "weight": 50
         }
