--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx8G
 
 
 # Mod Properties
-	version = 3.0.0-beta.4
+	version = 3.0.0
 	maven_group = io.github.diamonddevv
 	archives_base_name = enderism
 
@@ -16,3 +16,6 @@ org.gradle.jvmargs=-Xmx8G
 	libgenetics = 9557804
 	simple_trims_version = 0.2.0
 	mixin_extras_version = 0.2.0-beta.9
+
+	## integrations
+
