--- a/build.gradle
+++ b/build.gradle
@@ -94,8 +94,8 @@ dependencies {
 	// libGenetics
 	include modImplementation ("com.github.diamonddevv:libgenetics:${project.libgenetics}");
 
-	// Simple Trims
-	include modImplementation("com.github.diamonddevv:simple-trims:${project.simple_trims_version}");
+	// Simple Trims - very buggy, so for now it is optional external dependency.
+	//include modImplementation("com.github.diamonddevv:simple-trims:${project.simple_trims_version}");
 
 	// Mixin Extras
 	include(implementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-fabric:${project.mixin_extras_version}")))
