--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ org.gradle.jvmargs=-Xmx8G
 	libgenetics = 9557804
 	simple_trims_version = 0.4.0
 	mixin_extras_version = 0.2.0-beta.9
+	cca_version = 5.4.0
 
 	## integrations
 
